fix layout issue in sec view

--- a/web/src/app/scan-result/scan-result.component.scss
+++ b/web/src/app/scan-result/scan-result.component.scss
@@ -45,7 +45,7 @@ span.scanSummary span {
 }
 
 .tick {
-    margin: -0.1em;
+    margin: 0em;
 }
 
 .tick.Defcon1,
